--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -20,3 +20,8 @@
   margin-top: 0.5em;
   border-top: 2px solid #000;
 }
+
+.form-group.required .control-label:after {
+  content:"*";
+  color:red;
+}
